--- a/src/components/mainPage/Step.astro
+++ b/src/components/mainPage/Step.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from 'astro-icon'
 import { Image } from 'astro:assets'
-const { steps, step, src, title, description } = Astro.props
+const { steps, step, src, title, description, locale = 'fi' } = Astro.props
 ---
 
 <div class="wrapper">
