--- a/src/components/mainPage/NewestBlogPosts.astro
+++ b/src/components/mainPage/NewestBlogPosts.astro
@@ -1,17 +1,30 @@
 ---
-const allPosts = await Astro.glob('../../pages/posts/*.md')
-const sortedPosts = allPosts.sort((a, b) => a.frontmatter.pubDate < b.frontmatter.pubDate ? 1 : -1)
-const sixMostRecentPosts = sortedPosts.slice(0, 6)
+import { getLocaleFromAstro } from '../../utils/translations'
 import BlogPostCard from '../common/BlogPostCard.astro'
+
+const locale = getLocaleFromAstro(Astro)
+
+// Hide blog posts on non-Finnish locales
+let allPosts = []
+let sortedPosts = []
+let sixMostRecentPosts = []
+
+if (locale === 'fi') {
+    allPosts = await Astro.glob('../../pages/posts/*.md')
+    sortedPosts = allPosts.sort((a, b) => a.frontmatter.pubDate < b.frontmatter.pubDate ? 1 : -1)
+    sixMostRecentPosts = sortedPosts.slice(0, 6)
+}
 ---
 
-<div class="wrapper">
-    <h1 style="text-align: center;">Uusimmat tekstit astetta helpommasta työvuorosuunnittelusta</h1>
-    <div class="blogPosts">
-        {sixMostRecentPosts.map((post) => <BlogPostCard post={post} />)}
+{locale === 'fi' && (
+    <div class="wrapper">
+        <h1 style="text-align: center;">Uusimmat tekstit astetta helpommasta työvuorosuunnittelusta</h1>
+        <div class="blogPosts">
+            {sixMostRecentPosts.map((post) => <BlogPostCard post={post} />)}
+        </div>
+        <a href="/blogitekstit"><h3>Katso kaikki tekstit</h3></a>
     </div>
-    <a href="/blogitekstit"><h3>Katso kaikki tekstit</h3></a>
-</div>
+)}
 
 <style>
     h1 {
