Remove @vercel/analytics dependency and component, replacing it with GoogleAnalytics for tracking in Layout.astro.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Navigation from '../components/navigation/Navigation.astro'
 import Footer from '../components/navigation/Footer.astro'
-import Analytics from '../components/common/Analytics.astro'
+import GoogleAnalytics from '../components/common/GoogleAnalytics.astro'
 import { getLocaleFromAstro, t } from '../utils/translations'
 
 const locale = getLocaleFromAstro(Astro)
@@ -201,11 +201,11 @@ const finalOgDescription = ogDescription || finalDescription
         }
     }
     </style>
+    <GoogleAnalytics />
     </head>
     <body>
         <Navigation locale={locale} />
         <slot />
         <Footer locale={locale} />
-        <Analytics />
     </body>
 </html>
